--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="page-header">
+    <h1>Chat com suporte.</h1>
+    <p>Descreva seu problema e nós o ajudaremos a resolvê-lo.</p>
+  </div>
   <div class="chat-container" id="chatContainer">
     <div class="messages" id="messages"></div>
     <div class="input-container">
